name:                benchmark
version:             0.1.0.0
synopsis:            JS Framework Benchmark for Miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3

executable benchmark
  main-is: Main.hs
  build-depends:
    base,
    miso,
    containers,
    vector
  default-language: Haskell2010
  hs-source-dirs: src
